apps/fairshare/overlays/nonprod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fairshare
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - fairshare-nonprod.takunda.cloud
      secretName: fairshare-nonprod-tls

  rules:
    - host: fairshare-nonprod.takunda.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fairshare-client
                port:
                  number: 80
